<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="ui_okay">確定</string>
    <string name="ui_cancel">取消</string>
    <string name="ui_share">分享</string>
    <string name="ui_error">錯誤</string>
    <string name="ui_na">無法剖析</string>
    <string name="ui_loading">載入中…</string>

    <string name="app_name">內容農場檢查器</string>
    <string name="title_activity_main">內容農場檢查器（預覽版）</string>
    <string name="ui_warning_title">警告</string>
    <string name="ui_warning_subtitle">你正準備進入內容農場網站</string>
    <string name="ui_warning_desc">已被列在內容農場監視名單之中，因此作出此提示。</string>
    <string name="ui_exit">離開</string>
    <string name="ui_continue">繼續前往</string>
    <string name="ui_add_to_whitelist">加入白名單</string>
    <string name="ui_whitelist_message">確定加入白名單？</string>
    <string name="pref_no_browser">沒有選擇</string>
    <string name="pref_report_title">內容農場檢查器回報問題</string>
    <string name="pref_share_desc">擋下內容農場網站，你我有責任，快下載「內容農場檢查器」Android App！！\n\n</string>
    <string name="pref_previous_app_not_support">只適用於 Android 5.1 或以上</string>
    <string name="pref_browser_title">請選擇預設瀏覽器</string>
    <string name="pref_previous_app_permission">此切換兼容需要偵測最近應用程式列表，按此手動允許本程式取得「使用記錄存取權」。</string>
    <string name="pref_previous_app_summary_on">瀏覽器使用相同分頁開啟網址，外部程式使用瀏覽器新分頁開啟網址</string>
    <string name="pref_previous_app_summary_off">一律使用瀏覽器相同／最後分頁開啟網址</string>
    <string name="action_language" translatable="false">Language</string>
    <string name="ui_donate_title">請選擇贊助選項</string>
    <string name="iab_complete_message">喝著您所贊助的咖啡，謹記每杯咖啡背後的人情味，我們團隊會繼續努力實踐及堅守 Collaction 的理念，以答謝您的支持！</string>
    <string name="ui_custom_list_hint">每行輸入一個網址，不需要以 http(s):// 為字首。</string>
    <string name="toast_redirecting">短網址檢查中</string>
    <string name="ui_toggle">切換啟用</string>
    <string name="ui_enable">啟用檢查器</string>
    <string name="ui_disable">停用檢查器</string>

    <string-array name="language_choose" translatable="false">
        <item>System Default</item>
        <item>English</item>
        <item>中文（正體）</item>
    </string-array>

    <string-array name="language_locale_code" translatable="false">
        <item />
        <item>en</item>
        <item>zh</item>
    </string-array>

    <string-array name="language_locale_country_code" translatable="false">
        <item />
        <item />
        <item />
    </string-array>

    <string-array name="donate_choose">
        <item>HKD 10 一杯咖啡</item>
        <item>HKD 20 一盒咖啡</item>
        <item>HKD 50 一桶咖啡</item>
    </string-array>

    <string-array name="donate_summary" tools:ignore="InconsistentArrays">
        <item>點滴在心頭，小隊馬上精神抖擻</item>
        <item>您的咖啡是我們的重要養分喔！</item>
        <item>殊！好像聽到我們的伺服器喝咖啡的聲音</item>
        <item>這下我們可以再努力多幾個晚上了</item>
    </string-array>
</resources>
